# Gallery-Dev

./: README.md  output_show.yaml  pyproject.toml
data/: art.yaml  gallery.yaml
examples/: student_algorithm.py
src/gallery_algo_starter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/gallerylab/: __init__.py  algorithm_api.py  baseline_algorithm.py  bridge.py  cli.py  evaluators.py  io_utils.py  scoring_utils.py
tests/: smoke_test.py
